bugfix: align block properly

--- a/css/style.css
+++ b/css/style.css
@@ -30,22 +30,18 @@
 
 #search-wrapper {
     display: flex;
-    /* flex-direction: column; */
     padding: 2em 0;
-    /* border: 2px solid red; */
     justify-content: space-between;
 
 }
 
 #logo {
     width: 9em;
-    /* height: 8em; */
     flex: 1;
 }
 
 #search-zone {
     flex: 2;
-    /* width: 3em; */
 }
 
 #search-zone input {
@@ -75,20 +71,31 @@
 }
 
 /* Annonces */
-#annonce-wrapper {
+#annonce-wrapper,
+#categories-wrapper {
     display: flex;
     justify-content: space-between;
+
 }
 
-#annonce-wrapper a {
-    width: 12em;
-    height: 9em;
+#annonce-wrapper a,
+#categories-wrapper a {
+    width: 11em;
     text-decoration: none;
     color: #000;
-    border: 2px solid red;
+    display: block;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 -1px 4px 0 rgba(26,26,26,.08),0 4px 8px 0 rgba(26,26,26,.12);
 }
 
-#annonce-wrapper img {
-    width: 100%;
-    height: 100%;
+#annonce-wrapper img,
+#categories-wrapper img {
+    width: 100%; 
+    height: 8em;
+}
+
+#annonce-wrapper a:hover,
+#categories-wrapper a:hover {
+    color: #487fc1;
 }
